--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,49 +7,37 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="160dp"
-        android:layout_height="28dp"
+    <TextView
+        android:id="@+id/fraction"
         android:layout_gravity="center"
-        app:tabIndicatorFullWidth="true"
-        android:background="@drawable/shape_rect_rounded_16dp"
-        android:backgroundTint="#11000000"
-        app:tabGravity="fill"
-        app:tabIndicator="@drawable/shape_rect_rounded_12dp_with_borders_2dp"
-        app:tabIndicatorHeight="20dp"
-        app:tabIndicatorColor="@color/material_dynamic_neutral30"
-        app:tabIndicatorAnimationMode="linear"
-        app:tabIndicatorGravity="stretch"
-        app:tabInlineLabel="true"
-        app:tabMode="fixed"
-        app:tabRippleColor="@null"
-        app:tabSelectedTextColor="@color/black"
-        app:tabTextColor="@color/black">
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="text" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="audio" />
-
-    </com.google.android.material.tabs.TabLayout>
+    <TextView
+        android:id="@+id/state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
     <com.example.customtablayoutsample.PagerIndicator
         android:id="@+id/pager_indicator"
         android:layout_width="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center"
         android:background="@drawable/shape_rect_rounded_16dp"
         android:backgroundTint="@color/material_dynamic_neutral90"
         android:layout_height="wrap_content" />
 
-
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
+        android:id="@+id/view_pager_cover"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" />
 </LinearLayout>
